# tauri-plugin-user-input

./: AGENTS.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
examples/tauri-app/: package.json  pnpm-lock.yaml  tailwind.config.ts
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: button.toml  is_listening.toml  key.toml  move_mouse.toml  scroll.toml  set_event_types.toml  set_window_labels.toml  text.toml
permissions/schemas/: all.toml  schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
