[package]
name = "tauri-plugin-user-input"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-user-input"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"
rdev = { git = "https://github.com/kunkunsh/rdev.git", branch = "kunkun", features = [
    "serialize",
] }
enigo = { version = "0.3.0", features = ["serde"] }
serde_json = "1.0.134"

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
