[package]
name = "tauri-plugin-user-input"
version = "0.1.0"
authors = ["Huakun Shen"]
description = "Tauri plugin for user input (monitor and simulate keyboard and mouse events)"
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HuakunShen/tauri-plugin-user-input"
readme = "README.md"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-user-input"

[dependencies]
tauri = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
enigo = { version = "0.3.0", features = ["serde"] }
serde_json = "1.0"
monio = { version = "0.1.1", features = ["recorder"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
